@@ -2,5 +2,5 @@ name = cmer
 title = Creatures Revived
 description = An API for creating mobs.
 version = 1.1
-depends = default, wool
-optional_depends = creatures
+depends = default
+optional_depends = creatures, asm_spawneggs
