@@ -12,6 +12,7 @@ revived-1.1
 - does not automatically prepend colon (:) when registering a mob name
 - option to set nametag
 - griefing is disabled unless 'mobs_griefing' setting enabled
+- owned entities can be picked up with mobs:lasso
 
 
 revived-1.0
